--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,12 @@
 databases:
-  - name: mysite
-    databaseName: mysite
+  - name: mangashoppudb
+    databaseName: mangashoppudb
     user: mysite
     plan: free
 
 services:
   - type: web
-    name: mysite
+    name: mangashoppu
     runtime: ruby
     plan: free
     buildCommand: "./bin/render-build.sh"
@@ -15,7 +15,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: mysite
+          name: mangashoppudb
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
