--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,12 @@
 databases:
-  - name: mangashoppudb
-    databaseName: mangashoppudb
-    user: mysite
+  - name: manga-shoppu-db
+    databaseName: manga-shoppu-db
+    user: kendlc
     plan: free
 
 services:
   - type: web
-    name: mangashoppu
+    name: manga-shoppu-client
     runtime: ruby
     plan: free
     buildCommand: "./bin/render-build.sh"
@@ -15,7 +15,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: mangashoppudb
+          name: manga-shoppu-db
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
